# learning_cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
advertisingCost/: CMakeLists.txt  README.md  main.cpp
animalLegs/: CMakeLists.txt  README.md  main.cpp
approximatelyEqualAbsRel/: CMakeLists.txt  README.md  main.cpp
convertFromDecToBin/: CMakeLists.txt  README.md  main.cpp
evenNumFrom0to20/: CMakeLists.txt  README.md  main.cpp
howManyYears/: CMakeLists.txt  README.md  main.cpp
invertedPiramidOfNumbers/: CMakeLists.txt  README.md  main.cpp
monstersHealth/: CMakeLists.txt  README.md  main.cpp
moreLess/: CMakeLists.txt  README.md  main.cpp
numeratorsAndDenominators/: CMakeLists.txt  README.md  main.cpp
oddEven/: CMakeLists.txt  README.md  main.cpp
piramidOfNumbers/: CMakeLists.txt  README.md  main.cpp
primeDigit/: CMakeLists.txt  README.md  main.cpp
printAlphabet/: CMakeLists.txt  README.md  main.cpp
simpleCalculator/: CMakeLists.txt  README.md  main.cpp
simpleCalculatorOnSwitch/: CMakeLists.txt  README.md  main.cpp
simpleCalculatorV2.0/: CMakeLists.txt  README.md  main.cpp
sumTo/: CMakeLists.txt  README.md  main.cpp
theBallfromTheTower/: README.md  constansts.h  main.cpp
theBallfromTheTowerV2.0/: CMakeLists.txt  README.md  constansts.h  main.cpp
