cmake_minimum_required(VERSION 3.5)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(theBallfromTheTower)
add_subdirectory(simpleCalculator)
add_subdirectory(oddEven)
add_subdirectory(approximatelyEqualAbsRel)
add_subdirectory(primeDigit)
add_subdirectory(convertFromDecToBin)
